[package]
name = "kvs"
version = "0.1.0"
authors = ["Barney Kim <9wolfapple@gmail.com>"]
description = "A key-value store"
edition = "2024"

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = "0.7.0"
predicates = "3.1.3"
rand = "0.9.2"
tempfile = "3.23.0"
walkdir = "2.5.0"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
