[package]
name = "kvs"
version = "0.1.0"
authors = ["Barney Kim <9wolfapple@gmail.com>"]
description = "A key-value store"
edition = "2024"

[dev-dependencies]
assert_cmd = "2.1.0"
criterion = "0.7.0"
crossbeam-utils = "0.8.21"
panic-control = "0.1.4"
predicates = "3.1.3"
rand = "0.9.2"
tempfile = "3.23.0"
walkdir = "2.5.0"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
sled = "0.34.7"
crossbeam-channel = "0.5.15"
rayon = "1.11.0"
num_cpus = "1.17.0"

[[bench]]
name = "engine_bench"
harness = false